Fixes bug # 351: [Campagnes] - associer des cas de test / onglet 'Exigences' https://ci.squashtest.org/mantis/view.php?id=351

--- a/core/org.squashtest.csp.core.web/src/main/webapp/styles/structure.css
+++ b/core/org.squashtest.csp.core.web/src/main/webapp/styles/structure.css
@@ -423,7 +423,7 @@ div.tree-filter-reminder-div{
 
 div#tree-panel-left {
 	height: 100%;
-	width : 270px;
+	width : 300px;
 	border-right: 1px solid #CCCCCC;
 	z-index: 0;
 }
